# kinect-dk-mapper

./: .gitignore  .gitmodules  CMakeLists.txt  KinectDKMapper.cpp  KinectDKMapper.hpp  MappingParams.hpp  README.md  SetupMapping.cpp  azure-kinect-dk-logger.sln  main.cpp
azure-kinect-dk-logger/: azure-kinect-dk-logger.cpp  azure-kinect-dk-logger.vcxproj  azure-kinect-dk-logger.vcxproj.filters  packages.config
